--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "$react"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^5.11.1",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.4",
@@ -27,7 +28,7 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.468.0",
     "markdown-it": "^14.1.0",
-    "next": "^15.4.0-canary.29",
+    "next": "^15.3.2",
     "next-auth": "^5.0.0-beta.25",
     "next-sanity": "^9.8.29-canary.0",
     "react": "^19.0.0",
